--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "morgan": "^1.9.0",
     "nodemailer": "^4.4.1",
     "nodemon": "^1.14.10",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "randomstring": "^1.1.5"
   }
 }
