--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Ben Hu",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.17.1",
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
