--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "dependencies": {
     "axios": "^0.17.1",
     "bcrypt": "^1.0.3",
+    "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "jsonwebtoken": "^8.1.0",
+    "moment": "^2.20.1",
     "mongoose": "^4.13.9",
     "morgan": "^1.9.0",
     "nodemailer": "^4.4.1",
