--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "moment": "^2.20.1",
     "mongoose": "^4.13.9",
     "morgan": "^1.9.0",
+    "multer": "^1.3.0",
     "nodemailer": "^4.4.1",
     "nodemon": "^1.14.11",
     "path": "^0.12.7",
